remove z-index stopping login bar from working

--- a/app/assets/stylesheets/2015/base.css.scss
+++ b/app/assets/stylesheets/2015/base.css.scss
@@ -129,10 +129,6 @@ header {
 		float:left;
 	}
 
-	form {
-		z-index: -1;
-	}
-
 	&:after {
 		clear:both;
 		content:" ";
